# stellargive

./: .gitignore  README.md
contracts/stellar-give/: Cargo.toml  Makefile  README.md
contracts/stellar-give/src/: lib.rs
contracts/stellar-give/test_snapshots/: bench_get_campaigns_by_creator.1.json  bench_get_campaigns_by_id_batch.1.json  bench_get_campaigns_paged_100_campaigns.1.json  bench_get_campaigns_paged_with_limit_20.1.json  test_claim_fee_accuracy_at_minimum_donation.1.json  test_claim_multiple_donations_exact_total.1.json  test_claim_preserves_every_stroop_across_fee.1.json  test_claim_single_donation_exact_amount.1.json  test_claim_stroop_level_precision.1.json  test_claim_with_multiple_beneficiaries_exact_split.1.json  test_claim_with_rounding_dust_handling.1.json  test_claim_zero_fee_for_small_amounts.1.json  test_create_and_donate_both_events_emitted.1.json  test_create_event_payload_exact_match.1.json  test_create_event_topic_is_created_symbol.1.json  test_donate_after_deadline.1.json  test_donate_exactly_at_deadline.1.json  test_donation_event_has_two_ordered_topics.1.json  test_donation_event_payload_exact_match.1.json  test_events_ordered_create_before_donation.1.json  test_gas_cost_max_title.1.json  test_long_title_rejected.1.json  test_max_i128_donation_rejected.1.json  test_overflow_returns_arithmetic_error.1.json  test_persistent_storage_ttl_extension.1.json  test_status_transitions_from_active_to_expired.1.json  test_unicode_title_edge_cases.1.json
contracts/stellar-give/tests/: bench_campaigns_query.rs  test_boundary.rs  test_campaign.rs  (+3 more)
(+149 files in other folders)
