[package]
name = "stellar-give"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "21.7.7"

[dev-dependencies]
soroban-sdk = { version = "21.7.7", features = ["testutils"] }
proptest = "1.6"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
panic = "abort"
incremental = false
codegen-units = 1
lto = true
strip = "symbols"
